[package]
name = "keycloak"
version = "0.1.0"
authors = ["codebee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json","blocking","multipart","rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log4rs = "1.0.0"
log = "0.4.14"
